Правки от наставника

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
                 <button class="preview__button">Подробнее</button>
             </div>
             <div class="features">
-                <h3 class="features__title">Горящие туры</h3>
+                <div class="features__properties">
+                    <h3 class="features__title">Горящие туры</h3>
+                    <img src="" alt="" class="features__icon">
+                </div>
                 <ul class="features__list">
                     <li class="features__item">
                         <div class="features__img">
@@ -178,9 +181,9 @@
                 </div>
             </div>
             <div class="about">
-                <img src="" alt="" class="about_img">
+                <img src="" alt="" class="about__img">
                 <div class="about__content">
-                    <img src="" alt="" class="about__img">
+                    <img src="" alt="" class="about__content-img">
                     <div class="about__title">О нас</div>
                     <div class="about__text">Сайт рыбатекст поможет дизайнеру, верстальщику, 
                         вебмастеру сгенерировать несколько абзацев более менее осмысленного 
