--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="preview">
                     <h2 class="preview__title">Авторские туры по Азии</h2>
                     <p class="preview__text">Открой для себя Азию</p>
-                    <button class="preview__button button">Подробнее</button>
+                    <button class="preview__button button button--width">Подробнее</button>
                 </div>
                 <div class="features">
                     <div class="features__properties">
@@ -128,71 +128,57 @@
                     </ul>
                 </div>
                 <div class="news">
-                    <h2 class="news__title">Новости и акции</h2>
-                    <ul class="news__list">
-                        <li class="news__item">
-                            <img src="./img/plain.png" alt="plane" class="news__img">
-                            <div class="news__content">
-                                <time class="news__date">
-                                    <div class="news__date-month">Декабрь</div>
-                                    <div class="news__date-year">2021</div>
-                                </time>
-                                <div class="news__subtitle">Дешевые путевки на Новый Год!</div>
-                                <div class="news__text">Проведи новый год в Тайланде</div>
-                            </div>
-                        </li>
-                        <li class="news__item">
-                            <img src="./img/Surfer.png" alt="surfer" class="news__img">
-                            <div class="news__content">
-                                <time class="news__date">
-                                    <div class="news__date-month">Декабрь</div>
-                                    <div class="news__date-year">2021</div>
-                                </time>
-                                <div class="news__subtitle">Акция для серфенгистов!</div>
-                                <div class="news__text">В сезон больших волн скидка на путевку в Тайланд
-                                    на островсерфенгистов. Удачного пути!
+                    <div class="container">
+                        <h2 class="news__title">Новости и акции</h2>
+                        <ul class="news__list">
+                            <li class="news__item">
+                                <img src="./img/plain.png" alt="plane" class="news__img">
+                                <div class="news__content">
+                                    <time class="news__date">Декабрь 2021</time>
+                                    <div class="news__subtitle">Дешевые путевки на Новый Год!</div>
+                                    <div class="news__text">Проведи новый год в Тайланде</div>
                                 </div>
-                            </div>
-                        </li>
-                    </ul>
-                    <div class="paginator">
-                        <div class="paginator__display">Страница <span class="paginator__display-current">1</span>из <span class="paginator__dispaly-all">7</span></div>
-                        <ul class="paginator__list">
-                            <li class="paginator__item">
-                                <a href="" class="paginator__link">1</a>
                             </li>
-                            <li class="paginator__item">
-                                <a href="" class="paginator__link">2</a>
-                            </li>
-                            <li class="paginator__item">
-                                <a href="" class="paginator__link">3</a>
-                            </li>
-                            <li class="paginator__item">
-                                <a href="" class="paginator__link">4</a>
-                            </li>
-                            <li class="paginator__item">
-                                <a href="" class="paginator__link">5</a>
-                            </li>
-                            <li class="paginator__item">
-                                <a href="" class="paginator__link">6</a>
-                            </li>
-                            <li class="paginator__item">
-                                <a href="" class="paginator__link">7</a>
+                            <li class="news__item">
+                                <img src="./img/Surfer.png" alt="surfer" class="news__img">
+                                <div class="news__content">
+                                    <time class="news__date">Декабрь 2021</time>
+                                    <div class="news__subtitle">Акция для серфенгистов!</div>
+                                    <div class="news__text">В сезон больших волн скидка на путевку в Тайланд
+                                        на остров серфенгистов. Удачного пути!
+                                    </div>
+                                </div>
                             </li>
                         </ul>
                     </div>
+                    <div class="paginator">
+                        <div class="paginator__display">Страница <span class="paginator__display-current">1</span>из <span class="paginator__dispaly-all">7</span></div>
+                        <ul class="paginator__list">
+                            <li class="paginator__item paginator__item--active"><a href="#" class="paginator__link">1</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">2</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">3</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">4</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">5</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">6</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">7</a></li>
+                        </ul>
+                    </div>
                 </div>
-                <div class="about">
-                    <img src="./img/gates.png" alt="gates" class="about__img">
-                    <div class="about__content">
-                        <img src="./img/mountains.png" alt="mountains" class="about__content-img">
-                        <div class="about__title">О нас</div>
-                        <div class="about__text">Сайт рыбатекст поможет дизайнеру, верстальщику,
+                <div class="container">
+                    <div class="about">
+                        <img src="./img/gates.png" alt="gates" class="about__img">
+                        <div class="about__content">
+                            <img src="./img/mountains.png" alt="mountains" class="about__content-img">
+                            <div class="about__title">О нас</div>
+                            <div class="about__text">
+                            <p>Сайт рыбатекст поможет дизайнеру, верстальщику,
                             вебмастеру сгенерировать несколько абзацев более менее осмысленного
                             текста рыбы на русском языке, а начинающему оратору отточить навык
                             публичных выступлений в домашних условиях.
+                            </p>
+                            </div>
+                            <button class="about__button button">Подробнее</button>
                         </div>
-                        <button class="about__button button">Подробнее</button>
                     </div>
                 </div>
             </main>
