--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wrapper">
+    <div class="wrapper main-page-wrapper">
         <div class="container">
             <header class="header">
                 <div class="logo">
@@ -165,68 +165,63 @@
                     </div>
                 </div>
                 <div class="about">
-                    <img src="./img/gates.png" alt="gates" class="about__img">
                     <div class="about__content">
                         <img src="./img/mountains.png" alt="mountains" class="about__content-img">
-                        <div class="about__title">О нас</div>
-                        <div class="about__text">
-                        <p>Сайт рыбатекст поможет дизайнеру, верстальщику,
-                        вебмастеру сгенерировать несколько абзацев более менее осмысленного
-                        текста рыбы на русском языке, а начинающему оратору отточить навык
-                        публичных выступлений в домашних условиях.
-                        </p>
+                        <div class="about__desc">
+                            <div class="about__title">О нас</div>
+                            <div class="about__text">
+                            <p>Сайт рыбатекст поможет дизайнеру, верстальщику,
+                            вебмастеру сгенерировать несколько абзацев более менее осмысленного
+                            текста рыбы на русском языке, а начинающему оратору отточить навык
+                            публичных выступлений в домашних условиях.
+                            </p>
+                            </div>
+                            <button class="about__button button button--width">Подробнее</button>
                         </div>
-                        <button class="about__button button">Подробнее</button>
                     </div>
                 </div>
             </main>
-            <footer class="footer">
-                <div class="logo">
-                    <a href="/" class="logo__link">
-                        <img src="./img/logo.png" alt="Logo Icon" class="logo__img">
-                    </a>
+            <footer class="footer-container">
+                <div class="container footer-container__content">
+                    <div class="logo">
+                        <a href="/" class="logo__link">
+                            <img src="./img/logo.png" alt="Logo Icon" class="logo__img">
+                        </a>
+                    </div>
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Главная</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Услуги</a>
+                            </li>
+                            <li class="menu__item">
+                                <a href="" class="menu__link">Отзывы</a>
+                            </li>
+                        </ul>
+                    </nav>
+                    <div class="socials">
+                        <ul class="socials__list">
+                            <li class="socials__item socials__item--icon--telegram">
+                                <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                            </li>
+                            <li class="socials__item socials__item--icon--vk">
+                                <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                            </li>
+                            <li class="socials__item socials__item--icon--fb">
+                                <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                            </li>
+                            <li class="socials__item socials__item--icon--insta">
+                                <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                            </li>
+                        </ul>
+                    </div>
+                    <address class="contacts contacts--footer">
+                        <div class="contacts__text">Бесплатный звонок по России</div>
+                        <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
+                    </address>
                 </div>
-                <nav class="menu">
-                    <ul class="menu__list">
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Главная</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Услуги</a>
-                        </li>
-                        <li class="menu__item">
-                            <a href="" class="menu__link">Отзывы</a>
-                        </li>
-                    </ul>
-                </nav>
-                <div class="socials">
-                    <ul class="socials__list">
-                        <li class="socials__item">
-                            <a href="" class="socials__link">
-                                <img src="" alt="" class="socials__icon">
-                            </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="" class="socials__link">
-                                <img src="" alt="" class="socials__icon">
-                            </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="" class="socials__link">
-                                <img src="" alt="" class="socials__icon">
-                            </a>
-                        </li>
-                        <li class="socials__item">
-                            <a href="" class="socials__link">
-                                <img src="" alt="" class="socials__icon">
-                            </a>
-                        </li>
-                    </ul>
-                </div>
-                <address class="contacts">
-                    <div class="contacts__text">Бесплатный звонок по России</div>
-                    <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
-                </address>
             </footer>
         </div>
     </div>
