--- a/index.html
+++ b/index.html
@@ -155,12 +155,12 @@
                         <div class="paginator__display">Страница <span class="paginator__display-current">1 </span>из <span class="paginator__dispaly-all">7</span></div>
                         <ul class="paginator__list">
                             <li class="paginator__item paginator__item--active"><a href="#" class="paginator__link">1</a></li>
-                            <li class="paginator__item paginator__item--active"><a href="#" class="paginator__link">2</a></li>
-                            <li class="paginator__item paginator__item--active"><a href="#" class="paginator__link">3</a></li>
-                            <li class="paginator__item paginator__item--active"><a href="#" class="paginator__link">4</a></li>
-                            <li class="paginator__item paginator__item--active"><a href="#" class="paginator__link">5</a></li>
-                            <li class="paginator__item paginator__item--active"><a href="#" class="paginator__link">6</a></li>
-                            <li class="paginator__item paginator__item--active"><a href="#" class="paginator__link">7</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">2</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">3</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">4</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">5</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">6</a></li>
+                            <li class="paginator__item"><a href="#" class="paginator__link">7</a></li>
                         </ul>
                     </div>
                 </div>
