--- a/index.html
+++ b/index.html
@@ -3,37 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=1141, initial-scale=1.0">
     <title>Air-Asia</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./air_asia/css/normalize.css">
+    <link rel="stylesheet" href="./air_asia/css/main.css">
 </head>
 <body>
     <div class="wrapper main-page-wrapper">
-        <div class="container">
+        <div class="container wrapper__container">
             <header class="header">
-                <div class="logo">
-                    <a href="/" class="logo__link">
-                        <img src="./img/logo.png" alt="Logo Icon" class="logo__img">
-                    </a>
+                <div class="header__col">
+                    <div class="logo">
+                        <a href="/" class="logo__link">
+                            <img src="./air_asia/img/logo.png" alt="Logo Icon" class="logo__img">
+                        </a>
+                    </div>
+                    <nav class="menu">
+                        <ul class="menu__list">
+                            <li class="menu__item menu__item--active"><a href="#" class="menu__link">Главная</a>
+                            </li>
+                            <li class="menu__item"><a href="#" class="menu__link">Услуги</a>
+                            </li>
+                            <li class="menu__item"><a href="#" class="menu__link">Отзывы</a>
+                            </li>
+                        </ul>
+                    </nav>
                 </div>
-                <nav class="menu">
-                    <ul class="menu__list">
-                        <li class="menu__item menu__item--active"><a href="#" class="menu__link">Главная</a>
-                        </li>
-                        <li class="menu__item"><a href="#" class="menu__link">Услуги</a>
-                        </li>
-                        <li class="menu__item"><a href="#" class="menu__link">Отзывы</a>
-                        </li>
-
-                    </ul>
-                </nav>
-                <address class="contacts">
-                    <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
-                    <div class="contacts__schedule">График работы</div>
-                </address>
+                <div class="header__col header__col--align--right">
+                    <address class="contacts">
+                        <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
+                        <div class="contacts__schedule">График работы</div>
+                    </address>
+                </div>
             </header>
             <main class="main">
                 <div class="preview">
@@ -44,25 +48,25 @@
                 <div class="features">
                     <div class="features__properties">
                         <h3 class="features__title">Горящие туры</h3>
-                        <img src="./img/flame.png" alt="flame icon" class="features__icon">
+                        <img src="./air_asia/img/flame.png" alt="flame icon" class="features__icon">
                     </div>
                     <ul class="features__list">
                         <li class="features__item">
                             <div class="features__img">
-                                <img src="./img/river.png" alt="thailand" class="features__img-thailand">
+                                <img src="./air_asia/img/river.png" alt="thailand" class="features__img-thailand">
                             </div>
                             <div class="features__content">
                                 <h4 class="features__subtitle">Таиланд</h4>
                                 <div class="features__desc">
                                     <div class="features__desc-block">
                                         <div class="features__desc-icon">
-                                            <img src="./img/calendar.png" alt="Calendar" class="features__desc-calendar">
+                                            <img src="./air_asia/img/calendar.png" alt="Calendar" class="features__desc-calendar">
                                         </div>
                                         <div class="features__desc-time">7-12 ночей</div>
                                     </div>
                                     <div class="features__desc-block">
                                         <div class="features__desc-icon">
-                                            <img src="./img/meal.png" alt="Meal" class="features__desc-meal">
+                                            <img src="./air_asia/img/meal.png" alt="Meal" class="features__desc-meal">
                                         </div>
                                         <div class="features__desc-meal">Завтраки</div>
                                     </div>
@@ -75,20 +79,20 @@
                         </li>
                         <li class="features__item">
                             <div class="features__img">
-                                <img src="./img/pool.png" alt="bali" class="features__img-bali">
+                                <img src="./air_asia/img/pool.png" alt="bali" class="features__img-bali">
                             </div>
                             <div class="features__content">
                                 <h4 class="features__subtitle">Бали</h4>
                                 <div class="features__desc">
                                     <div class="features__desc-block">
                                         <div class="features__desc-icon">
-                                            <img src="./img/calendar.png" alt="Calendar" class="features__desc-calendar">
+                                            <img src="./air_asia/img/calendar.png" alt="Calendar" class="features__desc-calendar">
                                         </div>
                                         <div class="features__desc-time">7-12 ночей</div>
                                     </div>
                                     <div class="features__desc-block">
                                         <div class="features__desc-icon">
-                                            <img src="./img/meal.png" alt="Meal" class="features__desc-meal">
+                                            <img src="./air_asia/img/meal.png" alt="Meal" class="features__desc-meal">
                                         </div>
                                         <div class="features__desc-meal">Завтраки</div>
                                     </div>
@@ -101,20 +105,20 @@
                         </li>
                         <li class="features__item">
                             <div class="features__img">
-                                <img src="./img/ocean.png" alt="indonesia" class="features__img-indonesia">
+                                <img src="./air_asia/img/ocean.png" alt="indonesia" class="features__img-indonesia">
                             </div>
                             <div class="features__content">
                                 <h4 class="features__subtitle">Индонезия</h4>
                                 <div class="features__desc">
                                     <div class="features__desc-block">
                                         <div class="features__desc-icon">
-                                            <img src="./img/calendar.png" alt="Calendar" class="features__desc-calendar">
+                                            <img src="./air_asia/img/calendar.png" alt="Calendar" class="features__desc-calendar">
                                         </div>
                                         <div class="features__desc-time">7-12 ночей</div>
                                     </div>
                                     <div class="features__desc-block">
                                         <div class="features__desc-icon">
-                                            <img src="./img/meal.png" alt="Meal" class="features__desc-meal">
+                                            <img src="./air_asia/img/meal.png" alt="Meal" class="features__desc-meal">
                                         </div>
                                         <div class="features__desc-meal">Завтраки</div>
                                     </div>
@@ -132,7 +136,7 @@
                         <h2 class="news__title">Новости и акции</h2>
                         <ul class="news__list">
                             <li class="news__item">
-                                <img src="./img/plain.png" alt="plane" class="news__img">
+                                <img src="./air_asia/img/plain.png" alt="plane" class="news__img">
                                 <div class="news__content">
                                     <time class="news__date">Декабрь 2021</time>
                                     <div class="news__subtitle">Дешевые путевки на Новый Год!</div>
@@ -140,7 +144,7 @@
                                 </div>
                             </li>
                             <li class="news__item">
-                                <img src="./img/Surfer.png" alt="surfer" class="news__img">
+                                <img src="./air_asia/img/Surfer.png" alt="surfer" class="news__img">
                                 <div class="news__content">
                                     <time class="news__date">Декабрь 2021</time>
                                     <div class="news__subtitle">Акция для серфенгистов!</div>
@@ -166,7 +170,7 @@
                 </div>
                 <div class="about">
                     <div class="about__content">
-                        <img src="./img/mountains.png" alt="mountains" class="about__content-img">
+                        <img src="./air_asia/img/mountains.png" alt="mountains" class="about__content-img">
                         <div class="about__desc">
                             <div class="about__title">О нас</div>
                             <div class="about__text">
@@ -183,44 +187,48 @@
             </main>
             <footer class="footer-container">
                 <div class="container footer-container__content">
-                    <div class="logo">
-                        <a href="/" class="logo__link">
-                            <img src="./img/logo.png" alt="Logo Icon" class="logo__img">
-                        </a>
+                    <div class="footer-container__col">
+                        <div class="logo">
+                            <a href="/" class="logo__link">
+                                <img src="./air_asia/img/logo.png" alt="Logo Icon" class="logo__img">
+                            </a>
+                        </div>
+                        <nav class="menu">
+                            <ul class="menu__list">
+                                <li class="menu__item">
+                                    <a href="" class="menu__link">Главная</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="" class="menu__link">Услуги</a>
+                                </li>
+                                <li class="menu__item">
+                                    <a href="" class="menu__link">Отзывы</a>
+                                </li>
+                            </ul>
+                        </nav>
                     </div>
-                    <nav class="menu">
-                        <ul class="menu__list">
-                            <li class="menu__item">
-                                <a href="" class="menu__link">Главная</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="" class="menu__link">Услуги</a>
-                            </li>
-                            <li class="menu__item">
-                                <a href="" class="menu__link">Отзывы</a>
-                            </li>
-                        </ul>
-                    </nav>
-                    <div class="socials">
-                        <ul class="socials__list">
-                            <li class="socials__item socials__item--icon--telegram">
-                                <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
-                            </li>
-                            <li class="socials__item socials__item--icon--vk">
-                                <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
-                            </li>
-                            <li class="socials__item socials__item--icon--fb">
-                                <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
-                            </li>
-                            <li class="socials__item socials__item--icon--insta">
-                                <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
-                            </li>
-                        </ul>
+                    <div class="footer-container__col--align--right">
+                        <div class="socials">
+                            <ul class="socials__list">
+                                <li class="socials__item socials__item--icon--telegram">
+                                    <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                                </li>
+                                <li class="socials__item socials__item--icon--vk">
+                                    <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                                </li>
+                                <li class="socials__item socials__item--icon--fb">
+                                    <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                                </li>
+                                <li class="socials__item socials__item--icon--insta">
+                                    <a href="" class="socials__link"><img src="" alt="" class="socials__icon"></a>
+                                </li>
+                            </ul>
+                        </div>
+                        <address class="contacts contacts--footer">
+                            <div class="contacts__text">Бесплатный звонок по России</div>
+                            <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
+                        </address>
                     </div>
-                    <address class="contacts contacts--footer">
-                        <div class="contacts__text">Бесплатный звонок по России</div>
-                        <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
-                    </address>
                 </div>
             </footer>
         </div>
