--- a/services.html
+++ b/services.html
@@ -40,11 +40,11 @@
                         </address>
                     </div>
                 </header>
-                <h1 class="page__title">Услуги</h1>
+                <h1 class="page-title">Услуги</h1>
                 <nav class="breadcrumb">
                     <ul class="breadcrumbs__list">
-                        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item-link">Главная</a></li>
-                        <li class="breadcrumbs__item breadcrumbs__item--active"><a href="#" class="breadcrumbs__item-link">Услуги</a></li>
+                        <li class="breadcrumbs__item"><a href="#" class="breadcrumbs__item-link">Главная&nbsp;</a></li>
+                        <li class="breadcrumbs__item breadcrumbs__item--active"><a href="#" class="breadcrumbs__item-link">&nbsp;Услуги</a></li>
                     </ul>
                 </nav>
             </div>
@@ -62,7 +62,7 @@
                                 <div class="service__desc">
                                     <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p>
                                 </div>
-                                <button class="preview__button button button--color">Подробнее</button>
+                                <button class="button button--color">Подробнее</button>
                             </div>
                         </a>
                     </li>
@@ -76,7 +76,7 @@
                                 <div class="service__desc">
                                     <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать несколько абзацев более менее осмысленного текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних условиях. При создании генератора мы использовали небезизвестный универсальный код речей.</p>
                                 </div>
-                                <button class="preview__button button button--color">Подробнее</button>
+                                <button class="button button--color">Подробнее</button>
                             </div>
                         </a>
                     </li>
