--- a/welcome.html
+++ b/welcome.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=1920, initial-scale=1.0">
+    <meta name="viewport" content="device-width, initial-scale=1.0">
     <title>Приветственная страница</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -11,20 +11,19 @@
     <link rel="stylesheet" href="./air_asia/css/main.css">
 </head>
 <body>
-    <div class="welcome">
-        <div class="welcome__container">
-            <div class="central">
-                <div class="central__shades">
-                    <img src="./air_asia/img_welcome/shades.png" alt="shades" class="shades__img">
+    <div class="wrapper wrapper--welcome">
+        <div class="animation__img">
+            <img src="./air_asia/img_welcome/shades.png" alt="shades" class="animation__img--shades">
+            <div class="animation">
+                <div class="animaton__logo">
+                    <img src="./air_asia/img_welcome/animation_logo.png" alt="animation_logo" class="animation__logo-icon">
                 </div>
-                <img src="./air_asia/img_welcome/лого.png" alt="Air-Asia-logo" class="central__logo">
-                <div class="central__title">
-                    <p>Открой для себя Азию</p>
+                <div class="animation__text">
+                    Открой для себя Азию
                 </div>
-                <a href="#" class="button button--red">Войти</a>
+                <button class="animation_button button">Войти</button>
             </div>
         </div>
     </div>
-    
 </body>
 </html>
