--- a/index.html
+++ b/index.html
@@ -34,7 +34,15 @@
                 <div class="header__col header__col--align--right">
                     <address class="contacts">
                         <a href="tel:+78007003030" class="contacts__tel">8 800 700 30 30</a>
-                        <div class="contacts__schedule">График работы</div>
+                        <div class="dropdown">
+                            <a href="#" class="dropdown__link">График работы</a>
+                            <div class="dropdown__menu">
+                                <ul class="dropdown__list">
+                                    <li class="dropdown__item">пн-вс: 09:00 - 20:00</li>
+                                    <li class="dropdown__item">Обед: 14:00 - 14:30</li>
+                                </ul>
+                            </div>
+                        </div>
                     </address>
                 </div>
             </header>
